deploy/hello-from-deployment.yaml
apiVersion: apps/v1 # for versions before 1.9.0 use apps/v1beta2
kind: Deployment
metadata:
  name: hello-from
spec:
  selector:
    matchLabels:
      app: hello-from
      tier: backend
  replicas: 1
  template:
    metadata:
      labels:
        app: hello-from
        tier: backend
    spec:
      containers:
      - name: webapp
        image: erdii/hello-from:2.3.0
        resources:
          requests:
            cpu: 100m
            memory: 100Mi
        ports:
        - containerPort: 3000
