deploy/hello-from-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: hello-from-ingress
  labels:
    app: hello-from
    tier: backend
spec:
  rules:
  - host: hello-from.tcskube.local
    http:
      paths:
      - backend:
          serviceName: hello-from
          servicePort: 3000
